# video-pi

./: .gitignore  .gitmodules  .tarignore  CMakeLists.txt  Makefile  NOTICE  README.md  build-omxiv  build-udevil  config  fix-loopback.sh
config/pcmanfm/: desktop-items-0.conf  pcmanfm.conf
data/: raspi-config.desktop  video-pi-devmon.desktop
debian/: Dockerfile  changelog  control  copyright  postinst
debian/source/: options
etc/: video-pi.fdignore  video-pi.sh
export-image/: prerun.sh
src/: install.c  setup.c  uninstall.c
stage1/00-boot-files/files/: config.txt
stage3/: 02-console-autologin  EXPORT_IMAGE
stage3/03-video-pi/: 00-packages  01-files.sh  01-run.sh  02-autologin-to-gui.sh
stage3/03-video-pi/files/home/pi/.config/lxsession/LXDE/: autostart
stage3/03-video-pi/files/home/pi/.config/mpv/: mpv.conf
stage3/03-video-pi/files/home/pi/.config/pcmanfm/LXDE/: desktop-items-0.conf
stage3/03-video-pi/files/home/pi/Desktop/: raspi-config.desktop
stage3/03-video-pi/files/opt/video_pi/pkg/: build-helper.sh
stage3/03-video-pi/files/opt/video_pi/pkg/mpv/: build.sh  mpv_0.27.0_armhf.deb
stage3/03-video-pi/files/opt/video_pi/pkg/udevil/: build.sh  udevil_0.4.4+-1_armhf.deb
udevil/: fix_exfat_nonempty.patch
usr/share/video-pi/: panel
